kubernetes_deploy/live-1/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laa-fee-calculator
  namespace: laa-fee-calculator-dev
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: laa-fee-calculator-app
