kubernetes_deploy/live-1/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: laa-fee-calculator-laa-fee-calculator-dev-blue
    external-dns.alpha.kubernetes.io/aws-weight: "0"
  name: laa-fee-calculator
  namespace: laa-fee-calculator-dev
spec:
  rules:
    - host: laa-fee-calculator-dev.apps.live-1.cloud-platform.service.justice.gov.uk
      http:
        paths:
        - path: /
          backend:
            serviceName: laa-fee-calculator
            servicePort: 8080
    - host: dev.laa-fee-calculator.service.justice.gov.uk
      http:
        paths:
        - path: /
          backend:
            serviceName: laa-fee-calculator
            servicePort: 8080
  tls:
    - hosts:
      - laa-fee-calculator-dev.apps.live-1.cloud-platform.service.justice.gov.uk
    - hosts:
      - dev.laa-fee-calculator.service.justice.gov.uk
      secretName: laa-fee-calculator-dev-cert
